--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.dll filter=lfs diff=lfs merge=lfs -text
+.ipynb filter=lfs diff=lfs merge=lfs -text
+,pkl filter=lfs diff=lfs merge=lfs -text
